--- a/server/.env.example
+++ b/server/.env.example
@@ -11,3 +11,20 @@ OLLAMA_MIN_CATEGORY_CONFIDENCE=0.72
 GEMINI_API_KEY=
 GEMINI_MODEL=gemini-2.5-flash
 GEMINI_TIMEOUT_MS=30000
+
+# Auto-learn v2 strict policy
+AUTOLEARN_V2_ENABLED=true
+AUTOLEARN_V2_MIN_SUPPORT=8
+AUTOLEARN_V2_MIN_PURITY=0.98
+AUTOLEARN_V2_MAX_CONFLICT_RATE=0.02
+AUTOLEARN_V2_MAX_MATCH_RATIO=0.02
+AUTOLEARN_V2_MIN_CONFIDENCE=0.85
+AUTOLEARN_V2_MAX_SUGGESTIONS=30
+AUTOLEARN_V2_MAX_PER_CATEGORY=3
+AUTOLEARN_V2_MAX_CREATE_PER_RUN=10
+AUTOLEARN_V2_REQUIRE_SCOPE_CONSTRAINT=true
+AUTOLEARN_V2_INCLUDE_REVIEWED_TRUSTED=true
+
+# Comma-separated allowed frontend origins for API CORS
+# Example: CORS_ORIGINS=http://100.100.159.67:5173
+CORS_ORIGINS=
