Net spent in the summary bar for non-income views. Enable network access via Tailscale

--- a/server/.env.example
+++ b/server/.env.example
@@ -2,6 +2,10 @@ AI_FEATURES_ENABLED=false
 AI_PRIMARY_PROVIDER=gemini
 AI_FALLBACK_PROVIDER=ollama
 AI_SHARE_AMOUNT=false
+HOST=0.0.0.0
+PORT=3001
+PUBLIC_BASIC_AUTH_USER=
+PUBLIC_BASIC_AUTH_PASS=
 OLLAMA_MAX_BATCH=80
 OLLAMA_BASE_URL=http://127.0.0.1:11434
 OLLAMA_MODEL=llama3.1:8b
@@ -26,5 +30,5 @@ AUTOLEARN_V2_REQUIRE_SCOPE_CONSTRAINT=true
 AUTOLEARN_V2_INCLUDE_REVIEWED_TRUSTED=true
 
 # Comma-separated allowed frontend origins for API CORS
-# Example: CORS_ORIGINS=http://100.100.159.67:5173
+# Example: CORS_ORIGINS=http://192.168.68.61:5173,http://100.100.159.67:5173
 CORS_ORIGINS=
